crates/ratatui-kit/tests/ui/fail/with_layout_style_non_named.rs
use ratatui_kit::prelude::*;

#[with_layout_style]
#[derive(Default, Props)]
struct TupleProps(u8);

#[with_layout_style]
#[derive(Default, Props)]
struct UnitProps;

fn main() {}
